--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,10 @@
  * customize material design icon sizes 
  *-------------------------------------
  */
-
+ .responsive {
+    width: 100%;
+    height: auto;
+  }
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
